--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
    <title>Redirecting to KaguraWelt</title>
-   <meta http-equiv="refresh" content="0; URL=https://discord.com/invite/rqV9szs">
+   <meta http-equiv="refresh" content="0; URL=https://discord.com/invite/Nkk7evupV5">
    <link rel="canonical" href="https://discord.gg/Nkk7evupV5">
 </meta>
