--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <meta charset="utf-8">
    <title>Redirecting to KaguraWelt</title>
    <meta http-equiv="refresh" content="0; URL=https://discord.com/invite/Nkk7evupV5">
-   <link rel="canonical" href="https://discord.gg/Nkk7evupV5">
+   <link rel="canonical" href="https://discord.com/invite/Nkk7evupV5">
 </meta>
