--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
    <title>Redirecting to KaguraWelt</title>
-   <meta http-equiv="refresh" content="0; URL=https://discord.com/invite/Nkk7evupV5">
-   <link rel="canonical" href="https://discord.com/invite/Nkk7evupV5">
+   <meta http-equiv="refresh" content="0; URL=https://youtu.be/dQw4w9WgXcQ">
+   <link rel="canonical" href="https://youtu.be/dQw4w9WgXcQ">
 </meta>
