--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <meta charset="utf-8">
    <title>Redirecting to KaguraWelt</title>
    <meta http-equiv="refresh" content="0; URL=https://youtu.be/dQw4w9WgXcQ">
    <link rel="canonical" href="https://youtu.be/dQw4w9WgXcQ">
 </meta>
--->
-<h1> You've been rick rolled :) </h1>
-<iframe id="video-frame" src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ?&amp;enablejsapi=1&amp;autoplay=1&amp;mute=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" width="1193" height="671" frameborder="0"></iframe>
