--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <h1> You've been rickrolled. Haha. :) </h1>
 
-<iframe id="video-frame" src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="width: 1033px; height: 681px; left: 510px; top: 0px;" frameborder="0"></iframe>
+<iframe id="video-frame" src="https://www.youtube.com/embed/dQw4w9WgXcQ?rel=0&autoplay=1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" style="width: 1033px; height: 681px; left: 510px; top: 0px;" frameborder="0"></iframe>
 
 <script>
    
